Creating Category Model and formating some files

--- a/ecommerce/templates/ecommerce/base.html
+++ b/ecommerce/templates/ecommerce/base.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+
 <head>
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,6 +8,7 @@
 	<script src="https://cdn.tailwindcss.com"></script>
 	<title>Apex Store | {% block page_title %}{% endblock page_title %}</title>
 </head>
+
 <body>
 	<nav class="border-b border-gray-300">
 		<div class="max-w-6xl mx-auto py-2 px-6 xl:px-0 flex items-center justify-between">
@@ -19,13 +21,17 @@
 			</div>
 			<div class="menu-right flex items-center space-x-4">
 				<a href="#">
-					<svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
-						<path stroke-linecap="round" stroke-linejoin="round" d="M17.982 18.725A7.488 7.488 0 0012 15.75a7.488 7.488 0 00-5.982 2.975m11.963 0a9 9 0 10-11.963 0m11.963 0A8.966 8.966 0 0112 21a8.966 8.966 0 01-5.982-2.275M15 9.75a3 3 0 11-6 0 3 3 0 016 0z" />
+					<svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+						stroke="currentColor" class="w-6 h-6">
+						<path stroke-linecap="round" stroke-linejoin="round"
+							d="M17.982 18.725A7.488 7.488 0 0012 15.75a7.488 7.488 0 00-5.982 2.975m11.963 0a9 9 0 10-11.963 0m11.963 0A8.966 8.966 0 0112 21a8.966 8.966 0 01-5.982-2.275M15 9.75a3 3 0 11-6 0 3 3 0 016 0z" />
 					</svg>
 				</a>
 				<a href="#">
-					<svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
-						<path stroke-linecap="round" stroke-linejoin="round" d="M15.75 10.5V6a3.75 3.75 0 10-7.5 0v4.5m11.356-1.993l1.263 12c.07.665-.45 1.243-1.119 1.243H4.25a1.125 1.125 0 01-1.12-1.243l1.264-12A1.125 1.125 0 015.513 7.5h12.974c.576 0 1.059.435 1.119 1.007zM8.625 10.5a.375.375 0 11-.75 0 .375.375 0 01.75 0zm7.5 0a.375.375 0 11-.75 0 .375.375 0 01.75 0z" />
+					<svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+						stroke="currentColor" class="w-6 h-6">
+						<path stroke-linecap="round" stroke-linejoin="round"
+							d="M15.75 10.5V6a3.75 3.75 0 10-7.5 0v4.5m11.356-1.993l1.263 12c.07.665-.45 1.243-1.119 1.243H4.25a1.125 1.125 0 01-1.12-1.243l1.264-12A1.125 1.125 0 015.513 7.5h12.974c.576 0 1.059.435 1.119 1.007zM8.625 10.5a.375.375 0 11-.75 0 .375.375 0 01.75 0zm7.5 0a.375.375 0 11-.75 0 .375.375 0 01.75 0z" />
 					</svg>
 				</a>
 			</div>
@@ -34,15 +40,17 @@
 
 	<main>
 		{% block main_content %}
-	
+
 		{% endblock main_content %}
 	</main>
-	
+
 	<footer class="bg-gray-100">
 		<div class="max-w-6xl mx-auto py-10 px-6 xl:px-0 md:flex justify-between">
 			<div class="footer-left mb-12 md:mb-0">
 				<h2 class="mb-5 uppercase text-lg">About us</h2>
-				<p class="text-gray-700">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aperiam debitis earum vel ad, consequuntur recusandae reprehenderit rem sequi doloremque autem dolor tenetur ipsam laboriosam necessitatibus facilis a nemo exercitationem laborum.</p>
+				<p class="text-gray-700">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aperiam debitis earum
+					vel ad, consequuntur recusandae reprehenderit rem sequi doloremque autem dolor tenetur ipsam
+					laboriosam necessitatibus facilis a nemo exercitationem laborum.</p>
 			</div>
 			<div class="footer-right">
 				<h2 class="mb-5 uppercase text-lg">Socials</h2>
@@ -55,4 +63,5 @@
 		</div>
 	</footer>
 </body>
+
 </html>
