--- a/ecommerce/templates/ecommerce/index.html
+++ b/ecommerce/templates/ecommerce/index.html
@@ -1,75 +1,87 @@
 {% extends 'ecommerce/base.html' %}
 
 {% block page_title %}Home{% endblock page_title %}
-	
-{% block main_content %}
-	<header class="py-10 px-6 lg:py-20 bg-purple-500">
-		<div class="max-w-3xl mx-auto text-center">
-			<p class="mb-2 text-3xl lg:text-6xl text-white">Welcome to Apex Store</p>
-			<p class="mb-10 text-white">We sell the best products.</p>
-			<a href="#" class="inline-block px-8 py-4 rounded-xl bg-white text-purple-500 hover:bg-gray-200">Start Shopping</a>
-		</div>
-	</header>
 
-	<div class="mas-w-6xl mx-auto py-2 px-6 xl:px-0">
-		<div class="products flex items-center flex-wrap">
-			<div class="w-full md:w-1/3 xl:w-1/4 p-6">
-				<a href="#">
-					<img class="rounded-lg hover:shadow-lg" src="file:///mnt/01D41B118E9A5520/Work/Django/Apex_Ecommerce/images/levitating-product-display-with-beauty-cream.jpg">
+{% block main_content %}
+<header class="py-10 px-6 lg:py-20 bg-purple-500">
+	<div class="max-w-3xl mx-auto text-center">
+		<p class="mb-2 text-3xl lg:text-6xl text-white">Welcome to Apex Store</p>
+		<p class="mb-10 text-white">We sell the best products.</p>
+		<a href="#" class="inline-block px-8 py-4 rounded-xl bg-white text-purple-500 hover:bg-gray-200">Start
+			Shopping</a>
+	</div>
+</header>
+
+<div class="mas-w-6xl mx-auto py-2 px-6 xl:px-0">
+	<div class="products flex items-center flex-wrap">
+		<div class="w-full md:w-1/3 xl:w-1/4 p-6">
+			<a href="#">
+				<img class="rounded-lg hover:shadow-lg"
+					src="file:///mnt/01D41B118E9A5520/Work/Django/Apex_Ecommerce/images/levitating-product-display-with-beauty-cream.jpg">
+			</a>
+			<div class="pt-3 flex items-center justify-between">
+				<a href="#">Product Name</a>
+				<a href="#" class="text-purple-500 hover:text-purple-800">
+					<svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+						stroke="currentColor" class="w-6 h-6">
+						<path stroke-linecap="round" stroke-linejoin="round"
+							d="M15.75 10.5V6a3.75 3.75 0 10-7.5 0v4.5m11.356-1.993l1.263 12c.07.665-.45 1.243-1.119 1.243H4.25a1.125 1.125 0 01-1.12-1.243l1.264-12A1.125 1.125 0 015.513 7.5h12.974c.576 0 1.059.435 1.119 1.007zM8.625 10.5a.375.375 0 11-.75 0 .375.375 0 01.75 0zm7.5 0a.375.375 0 11-.75 0 .375.375 0 01.75 0z" />
+					</svg>
 				</a>
-				<div class="pt-3 flex items-center justify-between">
-					<a href="#">Product Name</a>
-					<a href="#" class="text-purple-500 hover:text-purple-800">
-						<svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
-							<path stroke-linecap="round" stroke-linejoin="round" d="M15.75 10.5V6a3.75 3.75 0 10-7.5 0v4.5m11.356-1.993l1.263 12c.07.665-.45 1.243-1.119 1.243H4.25a1.125 1.125 0 01-1.12-1.243l1.264-12A1.125 1.125 0 015.513 7.5h12.974c.576 0 1.059.435 1.119 1.007zM8.625 10.5a.375.375 0 11-.75 0 .375.375 0 01.75 0zm7.5 0a.375.375 0 11-.75 0 .375.375 0 01.75 0z" />
-						</svg>
-					</a>
-				</div>
-				<p class="pt-1 text-gray-400">$ 10.99</p>
 			</div>
-			<div class="w-full md:w-1/3 xl:w-1/4 p-6">
-				<a href="#">
-					<img class="rounded-lg hover:shadow-lg" src="file:///mnt/01D41B118E9A5520/Work/Django/Apex_Ecommerce/images/levitating-product-display-with-beauty-cream.jpg">
+			<p class="pt-1 text-gray-400">$ 10.99</p>
+		</div>
+		<div class="w-full md:w-1/3 xl:w-1/4 p-6">
+			<a href="#">
+				<img class="rounded-lg hover:shadow-lg"
+					src="file:///mnt/01D41B118E9A5520/Work/Django/Apex_Ecommerce/images/levitating-product-display-with-beauty-cream.jpg">
+			</a>
+			<div class="pt-3 flex items-center justify-between">
+				<a href="#">Product Name</a>
+				<a href="#" class="text-purple-500 hover:text-purple-800">
+					<svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+						stroke="currentColor" class="w-6 h-6">
+						<path stroke-linecap="round" stroke-linejoin="round"
+							d="M15.75 10.5V6a3.75 3.75 0 10-7.5 0v4.5m11.356-1.993l1.263 12c.07.665-.45 1.243-1.119 1.243H4.25a1.125 1.125 0 01-1.12-1.243l1.264-12A1.125 1.125 0 015.513 7.5h12.974c.576 0 1.059.435 1.119 1.007zM8.625 10.5a.375.375 0 11-.75 0 .375.375 0 01.75 0zm7.5 0a.375.375 0 11-.75 0 .375.375 0 01.75 0z" />
+					</svg>
 				</a>
-				<div class="pt-3 flex items-center justify-between">
-					<a href="#">Product Name</a>
-					<a href="#" class="text-purple-500 hover:text-purple-800">
-						<svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
-							<path stroke-linecap="round" stroke-linejoin="round" d="M15.75 10.5V6a3.75 3.75 0 10-7.5 0v4.5m11.356-1.993l1.263 12c.07.665-.45 1.243-1.119 1.243H4.25a1.125 1.125 0 01-1.12-1.243l1.264-12A1.125 1.125 0 015.513 7.5h12.974c.576 0 1.059.435 1.119 1.007zM8.625 10.5a.375.375 0 11-.75 0 .375.375 0 01.75 0zm7.5 0a.375.375 0 11-.75 0 .375.375 0 01.75 0z" />
-						</svg>
-					</a>
-				</div>
-				<p class="pt-1 text-gray-400">$ 10.99</p>
 			</div>
-			<div class="w-full md:w-1/3 xl:w-1/4 p-6">
-				<a href="#">
-					<img class="rounded-lg hover:shadow-lg" src="file:///mnt/01D41B118E9A5520/Work/Django/Apex_Ecommerce/images/levitating-product-display-with-beauty-cream.jpg">
+			<p class="pt-1 text-gray-400">$ 10.99</p>
+		</div>
+		<div class="w-full md:w-1/3 xl:w-1/4 p-6">
+			<a href="#">
+				<img class="rounded-lg hover:shadow-lg"
+					src="file:///mnt/01D41B118E9A5520/Work/Django/Apex_Ecommerce/images/levitating-product-display-with-beauty-cream.jpg">
+			</a>
+			<div class="pt-3 flex items-center justify-between">
+				<a href="#">Product Name</a>
+				<a href="#" class="text-purple-500 hover:text-purple-800">
+					<svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+						stroke="currentColor" class="w-6 h-6">
+						<path stroke-linecap="round" stroke-linejoin="round"
+							d="M15.75 10.5V6a3.75 3.75 0 10-7.5 0v4.5m11.356-1.993l1.263 12c.07.665-.45 1.243-1.119 1.243H4.25a1.125 1.125 0 01-1.12-1.243l1.264-12A1.125 1.125 0 015.513 7.5h12.974c.576 0 1.059.435 1.119 1.007zM8.625 10.5a.375.375 0 11-.75 0 .375.375 0 01.75 0zm7.5 0a.375.375 0 11-.75 0 .375.375 0 01.75 0z" />
+					</svg>
 				</a>
-				<div class="pt-3 flex items-center justify-between">
-					<a href="#">Product Name</a>
-					<a href="#" class="text-purple-500 hover:text-purple-800">
-						<svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
-							<path stroke-linecap="round" stroke-linejoin="round" d="M15.75 10.5V6a3.75 3.75 0 10-7.5 0v4.5m11.356-1.993l1.263 12c.07.665-.45 1.243-1.119 1.243H4.25a1.125 1.125 0 01-1.12-1.243l1.264-12A1.125 1.125 0 015.513 7.5h12.974c.576 0 1.059.435 1.119 1.007zM8.625 10.5a.375.375 0 11-.75 0 .375.375 0 01.75 0zm7.5 0a.375.375 0 11-.75 0 .375.375 0 01.75 0z" />
-						</svg>
-					</a>
-				</div>
-				<p class="pt-1 text-gray-400">$ 10.99</p>
 			</div>
-			<div class="w-full md:w-1/3 xl:w-1/4 p-6">
-				<a href="#">
-					<img class="rounded-lg hover:shadow-lg" src="file:///mnt/01D41B118E9A5520/Work/Django/Apex_Ecommerce/images/levitating-product-display-with-beauty-cream.jpg">
+			<p class="pt-1 text-gray-400">$ 10.99</p>
+		</div>
+		<div class="w-full md:w-1/3 xl:w-1/4 p-6">
+			<a href="#">
+				<img class="rounded-lg hover:shadow-lg"
+					src="file:///mnt/01D41B118E9A5520/Work/Django/Apex_Ecommerce/images/levitating-product-display-with-beauty-cream.jpg">
+			</a>
+			<div class="pt-3 flex items-center justify-between">
+				<a href="#">Product Name</a>
+				<a href="#" class="text-purple-500 hover:text-purple-800">
+					<svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+						stroke="currentColor" class="w-6 h-6">
+						<path stroke-linecap="round" stroke-linejoin="round"
+							d="M15.75 10.5V6a3.75 3.75 0 10-7.5 0v4.5m11.356-1.993l1.263 12c.07.665-.45 1.243-1.119 1.243H4.25a1.125 1.125 0 01-1.12-1.243l1.264-12A1.125 1.125 0 015.513 7.5h12.974c.576 0 1.059.435 1.119 1.007zM8.625 10.5a.375.375 0 11-.75 0 .375.375 0 01.75 0zm7.5 0a.375.375 0 11-.75 0 .375.375 0 01.75 0z" />
+					</svg>
 				</a>
-				<div class="pt-3 flex items-center justify-between">
-					<a href="#">Product Name</a>
-					<a href="#" class="text-purple-500 hover:text-purple-800">
-						<svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
-							<path stroke-linecap="round" stroke-linejoin="round" d="M15.75 10.5V6a3.75 3.75 0 10-7.5 0v4.5m11.356-1.993l1.263 12c.07.665-.45 1.243-1.119 1.243H4.25a1.125 1.125 0 01-1.12-1.243l1.264-12A1.125 1.125 0 015.513 7.5h12.974c.576 0 1.059.435 1.119 1.007zM8.625 10.5a.375.375 0 11-.75 0 .375.375 0 01.75 0zm7.5 0a.375.375 0 11-.75 0 .375.375 0 01.75 0z" />
-						</svg>
-					</a>
-				</div>
-				<p class="pt-1 text-gray-400">$ 10.99</p>
 			</div>
+			<p class="pt-1 text-gray-400">$ 10.99</p>
 		</div>
 	</div>
+</div>
 {% endblock main_content %}
-	
