hardcoded the layout of shop and product page

--- a/ecommerce/templates/ecommerce/index.html
+++ b/ecommerce/templates/ecommerce/index.html
@@ -12,7 +12,7 @@
 	</div>
 </header>
 
-<div class="mas-w-6xl mx-auto py-2 px-6 xl:px-0">
+<div class="mas-w-6xl mx-auto flex flex-wrap items-start py-6 px-6 xl:px-5">
 	<div class="products flex items-center flex-wrap px-5">
 		
 		{% for product in products %}
