--- a/ecommerce/templates/ecommerce/shop.html
+++ b/ecommerce/templates/ecommerce/shop.html
@@ -4,8 +4,28 @@
 
 {% block main_content %}
 
-<div class="mas-w-6xl mx-auto py-2 px-6 xl:px-0">
-	<div class="products flex items-center flex-wrap px-5">
+<div class="mas-w-6xl mx-auto flex flex-wrap items-start py-6 px-6 xl:px-5">
+	<div class="filters w-full lg:w-1/4 pl-4">
+		<h3 class="mb-3 text-xl uppercase">Search</h3>
+		<form>
+			<div class="flex">
+				<input type="text" class="p-4 bg-gray-100 border-0" placeholder="Enter your text...">
+				<button class="p-4 bg-gray-100 border-0">
+					<svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
+						<path stroke-linecap="round" stroke-linejoin="round" d="M21 21l-5.197-5.197m0 0A7.5 7.5 0 105.196 5.196a7.5 7.5 0 0010.607 10.607z" />
+					  </svg>					  
+				</button>
+			</div>
+		</form>
+		<h3 class="mt-6 mb-3 text-xl uppercase">Categories</h3>
+		<ul class="space-y-2">
+			<li><a href="#" class="text-purple-500">All Categories</a></li>
+			<li><a href="#" class="text-gray-500">Sofas</a></li>
+			<li><a href="#" class="text-gray-500">Beds</a></li>
+			<li><a href="#" class="text-gray-500">Shirts</a></li>
+		</ul>
+	</div>
+	<div class="products w-full lg:w-3/4 flex -mt-6 items-center flex-wrap">
 		
 		{% for product in products %}
 		<div class="w-full md:w-1/3 xl:w-1/4 p-6">
