Added add_to_cart view and layout

--- a/ecommerce/templates/ecommerce/product_detail.html
+++ b/ecommerce/templates/ecommerce/product_detail.html
@@ -15,7 +15,15 @@
 			<p class="mt-6 text-gray-700">{{ product.description }}</p>
 		{% endif %}
 			
-		<a href="#" class="mt-6 inline-block px-8 py-4 rounded-xl bg-purple-500 text-white hover:bg-purple-700">Add to cart</a>
+		<a 
+			href="#" 
+			class="mt-6 inline-block px-8 py-4 rounded-xl bg-purple-500 text-white hover:bg-purple-700"
+			hx-get="{% url 'ecommerce:add_to_cart' product.id %}"
+			hx-target="#menu-cart-button"
+			hx-swap="outerHTML"
+		>
+			Add to cart
+		</a>
 	</div>
 </div>
 {% endblock main_content %}
