Added accounts app and sign up page layout

--- a/ecommerce/templates/ecommerce/product_detail.html
+++ b/ecommerce/templates/ecommerce/product_detail.html
@@ -1,6 +1,6 @@
 {% extends 'ecommerce/base.html' %}
 
-{% block page_title %}Product Name{% endblock page_title %}
+{% block page_title %}{{ product.name }}{% endblock page_title %}
 
 {% block main_content %}
 <div class="mas-w-6xl mx-auto flex flex-wrap items-start py-6 px-6 xl:px-5">
