--- a/ecommerce/templates/ecommerce/shop.html
+++ b/ecommerce/templates/ecommerce/shop.html
@@ -4,7 +4,7 @@
 
 {% block main_content %}
 
-<div class="mas-w-6xl mx-auto flex flex-wrap items-start py-6 px-6 xl:px-5">
+<div class="max-w-6xl mx-auto flex flex-wrap items-start py-6 px-6 xl:px-0">
 	<div class="filters w-full lg:w-1/4 pl-4">
 		<h3 class="mb-3 text-xl uppercase">Search</h3>
 		<form method="get" action=".">
