--- a/ecommerce/templates/ecommerce/product_detail.html
+++ b/ecommerce/templates/ecommerce/product_detail.html
@@ -5,7 +5,7 @@
 {% block main_content %}
 <div class="mas-w-6xl mx-auto flex flex-wrap items-start py-6 px-6 xl:px-5">
 	<div class="images w-full mb-6 lg:mb-2 lg:w-3/5" >
-		<img src="1.jpg" class="rounded-xl">
+		<img src="{{ product.image.url }}" class="rounded-xl">
 	</div>
 	<div class="information w-full lg:p-6 lg:w-2/5">
 		<h1 class="text-2xl">{{ product.name }}</h1>
