Adding Sign up functionality

--- a/accounts/templates/accounts/signup.html
+++ b/accounts/templates/accounts/signup.html
@@ -9,25 +9,49 @@
 		<form action="." method="post" class="space-y-3">
 			{% csrf_token %}
 			<div>
+				<label>First Name</label>
+				<input type="text" name="first_name" class="w-full mt-2 py-4 px-6 bg-white rounded-xl">
+			</div>
+			<div>
+				<label>Last Name</label>
+				<input type="text" name="last_name" class="w-full mt-2 py-4 px-6 bg-white rounded-xl">
+			</div>
+			<div>
 				<label>Username</label>
-				<input type="text" class="w-full mt-2 py-4 px-6 bg-white rounded-xl">
+				<input type="text" name="username" class="w-full mt-2 py-4 px-6 bg-white rounded-xl">
 			</div>
 			<div>
 				<label>Email</label>
-				<input type="email" class="w-full mt-2 py-4 px-6 bg-white rounded-xl">
+				<input type="email" name="email" class="w-full mt-2 py-4 px-6 bg-white rounded-xl">
 			</div>
 			<div>
 				<label>Password</label>
-				<input type="password" class="w-full mt-2 py-4 px-6 bg-white rounded-xl">
+				<input type="password" name="password1" class="w-full mt-2 py-4 px-6 bg-white rounded-xl">
 			</div>
 			<div>
 				<label>Confirm Password</label>
-				<input type="password" class="w-full mt-2 py-4 px-6 bg-white rounded-xl">
+				<input type="password" name="password2" class="w-full mt-2 py-4 px-6 bg-white rounded-xl">
 			</div>
 			
-			<div class="p-6 bg-red-200 text-red-800 rounded-xl">
-				<p>This is an error</p>
-			</div>
+			{% if form.errors %}
+
+				{% for field in form %}
+				
+					{% for error in field.errors %}
+						<div class="p-6 bg-red-200 text-red-800 rounded-xl">
+							<p>{{ error | escape }}</p>
+						</div>
+					{% endfor %}
+					
+				{% endfor %}
+				
+				{% for error in form.non_field_errors %}
+					<div class="p-6 bg-red-200 text-red-800 rounded-xl">
+						<p>{{ error | escape }}</p>
+					</div>
+				{% endfor %}
+					
+			{% endif %}
 				
 			<div>
 				<button class="py-4 block w-full px-6 text-white rounded-xl bg-purple-500 hover:bg-purple-700">Sign Up</button>
