--- a/ecommerce/templates/ecommerce/base.html
+++ b/ecommerce/templates/ecommerce/base.html
@@ -18,6 +18,7 @@
 				<ul class="flex items-center space-x-4">
 					<li><a href="{% url 'ecommerce:shop' %}">Shop</a></li>
 					<li><a href="#">About</a></li>
+					
 				</ul>
 			</div>
 			<div class="menu-right flex items-center space-x-4">
@@ -29,6 +30,15 @@
 					</svg>
 				</a>
 				{% include 'ecommerce/menu_cart.html' %}
+				
+				{% if request.user.is_authenticated %}
+					<a href="{% url 'accounts:logout' %}">
+						<svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
+							<path stroke-linecap="round" stroke-linejoin="round" d="M15.75 9V5.25A2.25 2.25 0 0013.5 3h-6a2.25 2.25 0 00-2.25 2.25v13.5A2.25 2.25 0 007.5 21h6a2.25 2.25 0 002.25-2.25V15m3 0l3-3m0 0l-3-3m3 3H9" />
+						</svg> 
+					</a>
+				{% endif %}
+					
 			</div>
 		</div>
 	</nav>
