--- a/ecommerce/templates/ecommerce/partials/menu_cart.html
+++ b/ecommerce/templates/ecommerce/partials/menu_cart.html
@@ -1,4 +1,4 @@
-<a href="#" id="menu-cart-button" class="relative">
+<a href="{% url 'ecommerce:show_cart' %}" id="menu-cart-button" class="relative">
 	<svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
 		stroke="currentColor" class="w-6 h-6">
 		<path stroke-linecap="round" stroke-linejoin="round"
