Refactored a little bit and fixed add to cart button

--- a/ecommerce/templates/ecommerce/shop.html
+++ b/ecommerce/templates/ecommerce/shop.html
@@ -5,11 +5,11 @@
 {% block main_content %}
 
 <div class="max-w-6xl mx-auto flex flex-wrap items-start py-6 px-6 xl:px-0">
-	<div class="filters w-full lg:w-1/4 pl-4">
+	<div class="filters w-full lg:w-1/4 pr-1">
 		<h3 class="mb-3 text-xl uppercase">Search</h3>
 		<form method="get" action=".">
 			<div class="flex">
-				<input type="text" name="query" class="p-4 bg-gray-100 border-0" placeholder="Enter your text...">
+				<input type="text" name="query" class="p-4 w-52 bg-gray-100 border-0 focus:outline-none" placeholder="Enter your text...">
 				<button class="p-4 bg-gray-100 border-0">
 					<svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
 						<path stroke-linecap="round" stroke-linejoin="round" d="M21 21l-5.197-5.197m0 0A7.5 7.5 0 105.196 5.196a7.5 7.5 0 0010.607 10.607z" />
