--- a/ecommerce/templates/ecommerce/partials/product_list_item.html
+++ b/ecommerce/templates/ecommerce/partials/product_list_item.html
@@ -1,15 +1,34 @@
 <div class="w-full md:w-1/3 xl:w-1/4 p-6">
 	<a href="{% url 'ecommerce:product_detail' product.slug %}">
-		<img class="rounded-lg hover:shadow-lg"
-			src="{{ product.get_thumbnail }}">
+		<img
+			class="rounded-lg hover:shadow-lg"
+			src="{{ product.get_thumbnail }}"
+		/>
 	</a>
 	<div class="pt-3 flex items-center justify-between">
-		<a href="{% url 'ecommerce:product_detail' product.slug %}">{{ product.name }}</a>
-		<a href="#" class="text-purple-500 hover:text-purple-800">
-			<svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
-				stroke="currentColor" class="w-6 h-6">
-				<path stroke-linecap="round" stroke-linejoin="round"
-					d="M15.75 10.5V6a3.75 3.75 0 10-7.5 0v4.5m11.356-1.993l1.263 12c.07.665-.45 1.243-1.119 1.243H4.25a1.125 1.125 0 01-1.12-1.243l1.264-12A1.125 1.125 0 015.513 7.5h12.974c.576 0 1.059.435 1.119 1.007zM8.625 10.5a.375.375 0 11-.75 0 .375.375 0 01.75 0zm7.5 0a.375.375 0 11-.75 0 .375.375 0 01.75 0z" />
+		<a href="{% url 'ecommerce:product_detail' product.slug %}"
+			>{{ product.name }}</a
+		>
+		<a 
+			href="#" 
+			hx-get="{% url 'ecommerce:add_to_cart' product.id %}" 
+			hx-target="#menu-cart-button" 
+			hx-swap="outerHTML" 
+			class="text-purple-500 hover:text-purple-800"
+		>
+			<svg
+				xmlns="http://www.w3.org/2000/svg"
+				fill="none"
+				viewBox="0 0 24 24"
+				stroke-width="1.5"
+				stroke="currentColor"
+				class="w-6 h-6"
+			>
+				<path
+					stroke-linecap="round"
+					stroke-linejoin="round"
+					d="M15.75 10.5V6a3.75 3.75 0 10-7.5 0v4.5m11.356-1.993l1.263 12c.07.665-.45 1.243-1.119 1.243H4.25a1.125 1.125 0 01-1.12-1.243l1.264-12A1.125 1.125 0 015.513 7.5h12.974c.576 0 1.059.435 1.119 1.007zM8.625 10.5a.375.375 0 11-.75 0 .375.375 0 01.75 0zm7.5 0a.375.375 0 11-.75 0 .375.375 0 01.75 0z"
+				/>
 			</svg>
 		</a>
 	</div>
