--- a/ecommerce/templates/ecommerce/product_detail.html
+++ b/ecommerce/templates/ecommerce/product_detail.html
@@ -1,22 +1,23 @@
-{% extends 'ecommerce/base.html' %}
-
-{% block page_title %}{{ product.name }}{% endblock page_title %}
-
+{% extends 'ecommerce/base.html' %} 
+{% block page_title %}{{ product.name }}{%endblock page_title %} 
 {% block main_content %}
 <div class="mas-w-6xl mx-auto flex flex-wrap items-start py-6 px-6 xl:px-5">
-	<div class="images w-full mb-6 lg:mb-2 lg:w-3/5" >
-		<img src="{{ product.image.url }}" class="rounded-xl">
+	<div class="images w-full mb-6 lg:mb-2 lg:w-3/5">
+		<img 
+			src="{% if product.image %}{{ product.image.url }}{% else %}https://via.placeholder.com/500x270.jpg{% endif %}" 
+			class="rounded-xl ml-8" 
+		/>
 	</div>
 	<div class="information w-full lg:p-6 lg:w-2/5">
 		<h1 class="text-2xl">{{ product.name }}</h1>
 		<p class="mt-1 text-gray-400">$ {{ product.price }}</p>
-		
+
 		{% if product.description %}
-			<p class="mt-6 text-gray-700">{{ product.description }}</p>
+		<p class="mt-6 text-gray-700">{{ product.description }}</p>
 		{% endif %}
-			
-		<a 
-			href="#" 
+
+		<a
+			href="#"
 			class="mt-6 inline-block px-8 py-4 rounded-xl bg-purple-500 text-white hover:bg-purple-700"
 			hx-get="{% url 'ecommerce:add_to_cart' product.id %}"
 			hx-target="#menu-cart-button"
