--- a/ecommerce/templates/ecommerce/show_cart.html
+++ b/ecommerce/templates/ecommerce/show_cart.html
@@ -6,40 +6,27 @@
 
 <div class="max-w-6xl mx-auto flex flex-wrap items-start py-6 px-6 xl:px-0">
 	<div class="products w-full md:w-3/4 lg:w-3/4 xl:w-3/4">
-		<div class="product mb-6 flex pr-6">
-			<a href="#" class="w-1/4">
-				<img src="1.jpg" class="hover:shadow-lg rounded-xl">
-			</a>
-			<div class="w-3/4 pl-6">
-				<div class="flex justify-between">
-					<a href="#" class="text-lg">Product Name</a>
-					<span class="mb-6 pt-1 text-gray-500">$ 9.99</span>
-				</div>
-				<hr>
-				<div class="quantity mt-6 flex items-center space-x-4">
-					<a href="#" class="p-3 bg-gray-100">-</a>
-					<span>2</span>
-					<a href="#" class="p-3 bg-gray-100">+</a>
-				</div>
-			</div>
-		</div>
-		<div class="product mb-6 flex pr-6">
-			<a href="#" class="w-1/4">
-				<img src="1.jpg" class="hover:shadow-lg rounded-xl">
-			</a>
-			<div class="w-3/4 pl-6">
-				<div class="flex justify-between">
-					<a href="#" class="text-lg">Product Name</a>
-					<span class="mb-6 pt-1 text-gray-500">$ 9.99</span>
-				</div>
-				<hr>
-				<div class="quantity mt-6 flex items-center space-x-4">
-					<a href="#" class="p-3 bg-gray-100">-</a>
-					<span>2</span>
-					<a href="#" class="p-3 bg-gray-100">+</a>
+		
+		{% for item in cart %}	
+			<div class="product mb-6 flex pr-6">
+				<a href="#" class="w-1/4">
+					<img src="{{ item.product.get_thumbnail }}" class="hover:shadow-lg rounded-xl">
+				</a>
+				<div class="w-3/4 pl-6">
+					<div class="flex justify-between">
+						<a href="#" class="text-lg">{{ item.product.name }}</a>
+						<span class="mb-6 pt-1 text-gray-500">$ {{ item.product.price }}</span>
+					</div>
+					<hr>
+					<div class="quantity mt-6 flex items-center space-x-4">
+						<a href="#" class="p-3 bg-gray-100">-</a>
+						<span>{{ item.quantity }}</span>
+						<a href="#" class="p-3 bg-gray-100">+</a>
+					</div>
 				</div>
 			</div>
-		</div>
+		{% endfor %}
+			
 	</div>
 	<div class="summary w-full md:w-1/4 lg:w-1/4 xl:w-1/4 p-6 bg-gray-100 rounded-xl mt-3">
 		<h2 class="uppercase text-lg mb-5">summary</h2>
