Fixed total price in cart and checkout page

--- a/ecommerce/templates/ecommerce/checkout.html
+++ b/ecommerce/templates/ecommerce/checkout.html
@@ -57,7 +57,7 @@
 		<h2 class="uppercase text-lg mb-5">summary</h2>
 		<div class="mb-6 flex justify-between">
 			<span class="font-semibold">Total</span>
-			<span>$ 99</span>
+			<span>$ {{ cart.get_total_price }}</span>
 		</div>
 		<a href="#" class="inline-block w-full px-8 py-4 text-center rounded-xl text-white bg-purple-500 hover:bg-purple-700">Confirm Checkout</a>
 	</div>
