--- a/ecommerce/templates/ecommerce/show_cart.html
+++ b/ecommerce/templates/ecommerce/show_cart.html
@@ -32,7 +32,7 @@
 		<h2 class="uppercase text-lg mb-5">summary</h2>
 		<div class="mb-6 flex justify-between">
 			<span class="font-semibold">Total</span>
-			<span>$ 99</span>
+			<span>$ {{ cart.get_total_price }}</span>
 		</div>
 		<a href="#" class="inline-block px-8 py-4 rounded-xl text-white bg-purple-500 hover:bg-purple-700">Checkout</a>
 	</div>
