--- a/ecommerce/templates/ecommerce/checkout.html
+++ b/ecommerce/templates/ecommerce/checkout.html
@@ -13,11 +13,11 @@
 				<div class="flex space-x-6">
 					<div class="w-1/2 mb-4">
 						<label class="inline-block mb-2">First Name</label>
-						<input type="text" class="w-full p-5 rounded-xl bg-gray-50">
+						<input type="text" class="w-full p-5 rounded-xl bg-gray-50" value="{{ request.user.first_name }}">
 					</div>
 					<div class="w-1/2 mb-4">
 						<label class="inline-block mb-2">Last Name</label>
-						<input type="text" class="w-full p-5 rounded-xl bg-gray-50">
+						<input type="text" class="w-full p-5 rounded-xl bg-gray-50" value="{{ request.user.last_name }}">
 					</div>
 				</div>
 				<div class="mb-4">
@@ -40,7 +40,7 @@
 				<div class="flex space-x-6">
 					<div class="w-1/2 mb-4">
 						<label class="inline-block mb-2">Email</label>
-						<input type="email" class="w-full p-5 rounded-xl bg-gray-50">
+						<input type="email" class="w-full p-5 rounded-xl bg-gray-50"  value="{{ request.user.email }}">
 					</div>
 					<div class="w-1/2 mb-4">
 						<label class="inline-block mb-2">Phone Number</label>
