--- a/ecommerce/templates/ecommerce/show_cart.html
+++ b/ecommerce/templates/ecommerce/show_cart.html
@@ -34,7 +34,7 @@
 			<span class="font-semibold">Total</span>
 			<span>$ {{ cart.get_total_price }}</span>
 		</div>
-		<a href="#" class="inline-block px-8 py-4 rounded-xl text-white bg-purple-500 hover:bg-purple-700">Checkout</a>
+		<a href="{% url 'ecommerce:checkout' %}" class="inline-block px-8 py-4 rounded-xl text-white bg-purple-500 hover:bg-purple-700">Checkout</a>
 	</div>
 </div>
 
