Fixing redirecting to my account page and setting up its layout

--- a/ecommerce/templates/ecommerce/base.html
+++ b/ecommerce/templates/ecommerce/base.html
@@ -22,7 +22,7 @@
 				</ul>
 			</div>
 			<div class="menu-right flex items-center space-x-4">
-				<a href="#">
+				<a href="{% url 'accounts:my_account' %}">
 					<svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
 						stroke="currentColor" class="w-6 h-6">
 						<path stroke-linecap="round" stroke-linejoin="round"
