--- a/accounts/templates/accounts/edit_my_account.html
+++ b/accounts/templates/accounts/edit_my_account.html
@@ -6,6 +6,7 @@
 <div class="max-w-6xl mx-auto p-6">
 	<h1 class="mb-5 text-2xl">Edit Account</h1>
 	<form action="." method="post">
+		{% csrf_token %}
 		<div>
 			<label>First Name</label>
 			<input type="text" name="first_name" class="w-full my-2 py-4 px-6 bg-gray-100 rounded-xl" value="{{ request.user.first_name }}">
