--- a/ecommerce/templates/ecommerce/partials/cart_item.html
+++ b/ecommerce/templates/ecommerce/partials/cart_item.html
@@ -1,4 +1,4 @@
-<div class="product mb-6 flex pr-6">
+<div class="product mb-6 flex pr-6" id="cart-item-{{ item.product.id }}">
 	<a href="#" class="w-1/4">
 		<img src="{{ item.product.get_thumbnail }}" class="hover:shadow-lg rounded-xl">
 	</a>
@@ -9,9 +9,23 @@
 		</div>
 		<hr>
 		<div class="quantity mt-6 flex items-center space-x-4">
-			<a href="#" class="p-3 bg-gray-100">-</a>
+			<a 
+				class="p-3 bg-gray-100"
+				hx-get="{% url 'ecommerce:update_cart' item.product.id 'decrement' %}"
+				hx-target="#cart-item-{{ item.product.id }}"
+				hx-swap="outerHTML"
+			>
+				-
+			</a>
 			<span>{{ item.quantity }}</span>
-			<a href="#" class="p-3 bg-gray-100">+</a>
+			<a 
+				class="p-3 bg-gray-100"
+				hx-get="{% url 'ecommerce:update_cart' item.product.id 'increment' %}"
+				hx-target="#cart-item-{{ item.product.id }}"
+				hx-swap="outerHTML"
+			>
+				+
+			</a>
 		</div>
 	</div>
 </div>
