--- a/ecommerce/templates/ecommerce/show_cart.html
+++ b/ecommerce/templates/ecommerce/show_cart.html
@@ -16,7 +16,13 @@
 		<h2 class="uppercase text-lg mb-5">summary</h2>
 		<div class="mb-6 flex justify-between">
 			<span class="font-semibold">Total</span>
-			<span>$ {{ cart.get_total_price }}</span>
+			<span 
+				hx-get="{% url 'ecommerce:hx_cart_total_price' %}"
+				hx-trigger="update-menu-cart from:body"
+				hx-swap="innerHTML"
+			>
+				{% include 'ecommerce/partials/cart_total_price.html' %}
+			</span>
 		</div>
 		<a href="{% url 'ecommerce:checkout' %}" class="inline-block px-8 py-4 rounded-xl text-white bg-purple-500 hover:bg-purple-700">Checkout</a>
 	</div>
