--- a/ecommerce/templates/ecommerce/checkout.html
+++ b/ecommerce/templates/ecommerce/checkout.html
@@ -5,62 +5,66 @@
 {% block main_content %}
 
 <div class="max-w-6xl mx-auto flex flex-wrap items-start py-6 px-6 xl:px-0">
-	<div class="products w-full md:w-3/4 lg:w-3/4 xl:w-3/4">
-		<h1 class="mb-5 text-3xl">Checkout</h1>
-		<div class="w-full pr-6">
-			<div class="mb-6 p-6 bg-gray-100 rounded-xl">
-				<h2 class="mb-5 uppercase text-lg">Shipping Information</h2>
-				<div class="flex space-x-6">
-					<div class="w-1/2 mb-4">
-						<label class="inline-block mb-2">First Name</label>
-						<input type="text" class="w-full p-5 rounded-xl bg-gray-50" value="{{ request.user.first_name }}">
+	<form action="{% url 'ecommerce:place_order' %}" method="POST">
+		{% csrf_token %}
+		<div class="products w-full md:w-3/4 lg:w-3/4 xl:w-3/4">
+			<h1 class="mb-5 text-3xl">Checkout</h1>
+		
+			<div class="w-full pr-6">
+				<div class="mb-6 p-6 bg-gray-100 rounded-xl">
+					<h2 class="mb-5 uppercase text-lg">Shipping Information</h2>
+					<div class="flex space-x-6">
+						<div class="w-1/2 mb-4">
+							<label class="inline-block mb-2">First Name</label>
+							<input name="first_name" type="text" class="w-full p-5 rounded-xl bg-gray-50" value="{{ request.user.first_name }}">
+						</div>
+						<div class="w-1/2 mb-4">
+							<label class="inline-block mb-2">Last Name</label>
+							<input name="last_name" type="text" class="w-full p-5 rounded-xl bg-gray-50" value="{{ request.user.last_name }}">
+						</div>
 					</div>
-					<div class="w-1/2 mb-4">
-						<label class="inline-block mb-2">Last Name</label>
-						<input type="text" class="w-full p-5 rounded-xl bg-gray-50" value="{{ request.user.last_name }}">
+					<div class="mb-4">
+						<label class="inline-block mb-2">Address</label>
+						<input name="address" type="text" class="w-full p-5 rounded-xl bg-gray-50">
 					</div>
-				</div>
-				<div class="mb-4">
-					<label class="inline-block mb-2">Address</label>
-					<input type="text" class="w-full p-5 rounded-xl bg-gray-50">
-				</div>
-				<div class="flex space-x-6">
-					<div class="w-1/2 mb-4">
-						<label class="inline-block mb-2">Zip Code</label>
-						<input type="text" class="w-full p-5 rounded-xl bg-gray-50">
-					</div>
-					<div class="w-1/2 mb-4">
-						<label class="inline-block mb-2">City/Place</label>
-						<input type="text" class="w-full p-5 rounded-xl bg-gray-50">
-					</div>
-				</div>
-			</div>
-			<div class="mb-6 p-6 bg-gray-100 rounded-xl">
-				<h2 class="mb-5 uppercase text-lg">Contact Information</h2>
-				<div class="flex space-x-6">
-					<div class="w-1/2 mb-4">
-						<label class="inline-block mb-2">Email</label>
-						<input type="email" class="w-full p-5 rounded-xl bg-gray-50"  value="{{ request.user.email }}">
-					</div>
-					<div class="w-1/2 mb-4">
-						<label class="inline-block mb-2">Phone Number</label>
-						<input type="phone" class="w-full p-5 rounded-xl bg-gray-50">
+					<div class="flex space-x-6">
+						<div class="w-1/2 mb-4">
+							<label class="inline-block mb-2">Zip Code</label>
+							<input name="zip_code" type="text" class="w-full p-5 rounded-xl bg-gray-50">
+						</div>
+						<div class="w-1/2 mb-4">
+							<label class="inline-block mb-2">City/Place</label>
+							<input name="place" type="text" class="w-full p-5 rounded-xl bg-gray-50">
+						</div>
 					</div>
 				</div>
-			</div>
-			<div class="mb-6 p-6 bg-gray-100 rounded-xl">
-				<h2 class="mb-5 uppercase text-lg">Payment Information</h2>
+				<div class="mb-6 p-6 bg-gray-100 rounded-xl">
+					<h2 class="mb-5 uppercase text-lg">Contact Information</h2>
+					<div class="flex space-x-6">
+						<div class="w-1/2 mb-4">
+							<label class="inline-block mb-2">Email</label>
+							<input name="email" type="email" class="w-full p-5 rounded-xl bg-gray-50"  value="{{ request.user.email }}">
+						</div>
+						<div class="w-1/2 mb-4">
+							<label class="inline-block mb-2">Phone Number</label>
+							<input name="phone" type="phone" class="w-full p-5 rounded-xl bg-gray-50">
+						</div>
+					</div>
+				</div>
+				<div class="mb-6 p-6 bg-gray-100 rounded-xl">
+					<h2 class="mb-5 uppercase text-lg">Payment Information</h2>
+				</div>
 			</div>
 		</div>
-	</div>
-	<div class="summary w-full md:w-1/4 lg:w-1/4 xl:w-1/4 p-6 bg-gray-100 rounded-xl mt-3">
-		<h2 class="uppercase text-lg mb-5">summary</h2>
-		<div class="mb-6 flex justify-between">
-			<span class="font-semibold">Total</span>
-			<span>$ {{ cart.get_total_price }}</span>
+		<div class="summary w-full md:w-1/4 lg:w-1/4 xl:w-1/4 p-6 bg-gray-100 rounded-xl mt-3">
+			<h2 class="uppercase text-lg mb-5">summary</h2>
+			<div class="mb-6 flex justify-between">
+				<span class="font-semibold">Total</span>
+				<span>$ {{ cart.get_total_price }}</span>
+			</div>
+			<button class="inline-block w-full px-8 py-4 text-center rounded-xl text-white bg-purple-500 hover:bg-purple-700">Confirm Checkout</button>
 		</div>
-		<a href="#" class="inline-block w-full px-8 py-4 text-center rounded-xl text-white bg-purple-500 hover:bg-purple-700">Confirm Checkout</a>
-	</div>
+	</form>
 </div>
 
 {% endblock main_content %}
