--- a/accounts/templates/accounts/my_account.html
+++ b/accounts/templates/accounts/my_account.html
@@ -20,86 +20,36 @@
 	<hr>
 
 	<h2 class="my-6 text-xl">My Orders</h2>
-	<div class="w-full mb-6 p-6 flex flex-wrap bg-gray-100 rounded-xl">
-		<div class="mb-6 flex justify-between">
-			<a href="#" class="text-lg">Order ID: 1</a>
-		</div>
-		<div class="mb-6 w-full">
-			<div class="product mb-6 flex pr-6">
-				<a href="#" class="w-1/4">
-					<img src="1.jpg" alt="Product Picture" class="hover:shadow-lg rounded-xl">
-				</a>
-				<div class="w-3/4 pl-6">
-					<div class="flex justify-between">
-						<a href="#" class="text-lg">Product Name</a>
-						<p class="mb-6 pt-1 text-gray-400">$ 10</p>
-					</div>
-					<hr class="border-purple-400 rounded-xl">
-					<div class="mt-6">Quantity: 1</div>
-				</div>
+	
+	{% for order in request.user.orders.all %}
+		<div class="w-full mb-6 p-6 flex flex-wrap bg-gray-100 rounded-xl">
+			<div class="mb-6 flex justify-between">
+				<a href="#" class="text-lg">Order ID: {{ order.id }}</a>
 			</div>
-			<hr class="border-purple-400 rounded-xl mb-6">
-			<div class="product mb-6 flex pr-6">
-				<a href="#" class="w-1/4">
-					<img src="1.jpg" alt="Product Picture" class="hover:shadow-lg rounded-xl">
-				</a>
-				<div class="w-3/4 pl-6">
-					<div class="flex justify-between">
-						<a href="#" class="text-lg">Product Name</a>
-						<p class="mb-6 pt-1 text-gray-400">$ 10</p>
+			<div class="mb-6 w-full">
+				
+				{% for item in order.items.all %}
+					<div class="product mb-6 flex pr-6">
+						<a href="#" class="w-1/4">
+							<img src="{{ item.product.get_thumbnail }}" alt="Product Picture" class="hover:shadow-lg rounded-xl">
+						</a>
+						<div class="w-3/4 pl-6">
+							<div class="flex justify-between">
+								<a href="#" class="text-lg">{{ item.product.name }}</a>
+								<p class="mb-6 pt-1 text-gray-400">$ {{ item.product.price }}</p>
+							</div>
+							<hr class="border-purple-400 rounded-xl">
+							<div class="mt-6">Quantity: {{ item.quantity }}</div>
+						</div>
 					</div>
-					<hr class="border-purple-400 rounded-xl">
-					<div class="mt-6">Quantity: 1</div>
-				</div>
+					<hr class="border-purple-400 rounded-xl mb-6">
+					<p class="text-lg">Date: {{ order.created_at }}</p>
+					<p class="text-lg">Toral: $ 400</p>
+				{% endfor %}
+				
 			</div>
-			<hr class="border-purple-400 rounded-xl mb-6">
-
-			<div class="product mb-6 flex pr-6">
-				<a href="#" class="w-1/4">
-					<img src="1.jpg" alt="Product Picture" class="hover:shadow-lg rounded-xl">
-				</a>
-				<div class="w-3/4 pl-6">
-					<div class="flex justify-between">
-						<a href="#" class="text-lg">Product Name</a>
-						<p class="mb-6 pt-1 text-gray-400">$ 10</p>
-					</div>
-					<hr class="border-purple-400 rounded-xl">
-					<div class="mt-6">Quantity: 1</div>
-				</div>
-			</div>
-			<hr class="border-purple-400 rounded-xl mb-6">
-
 		</div>
-		<div>
-			<p class="text-lg">Date: 02.07.2023</p>
-			<p class="text-lg">Toral: $ 40</p>
-		</div>
-	</div>
-	<div class="w-full mb-6 p-6 flex flex-wrap bg-gray-100 rounded-xl">
-		<div class="mb-6 flex justify-between">
-			<a href="#" class="text-lg">Order ID: 2</a>
-		</div>
-		<div class="mb-6 w-full">
-			<div class="product mb-6 flex pr-6">
-				<a href="#" class="w-1/4">
-					<img src="1.jpg" alt="Product Picture" class="hover:shadow-lg rounded-xl">
-				</a>
-				<div class="w-3/4 pl-6">
-					<div class="flex justify-between">
-						<a href="#" class="text-lg">Product Name</a>
-						<p class="mb-6 pt-1 text-gray-400">$ 10</p>
-					</div>
-					<hr class="border-purple-400 rounded-xl">
-					<div class="mt-6">Quantity: 1</div>
-				</div>
-			</div>
-			<hr class="border-purple-400 rounded-xl mb-6">
-		</div>
-		<div>
-			<p class="text-lg">Date: 02.07.2023</p>
-			<p class="text-lg">Toral: $ 40</p>
-		</div>
-	</div>
+	{% endfor %}
 
 </div>
 {% endblock main_content %}
