fix: fixed product and order price in my acccount page

--- a/accounts/templates/accounts/my_account.html
+++ b/accounts/templates/accounts/my_account.html
@@ -36,7 +36,7 @@
 						<div class="w-3/4 pl-6">
 							<div class="flex justify-between">
 								<a href="#" class="text-lg">{{ item.product.name }}</a>
-								<p class="mb-6 pt-1 text-gray-400">$ {{ item.product.price }}</p>
+								<p class="mb-6 pt-1 text-gray-400">$ {{ item.price }}</p>
 							</div>
 							<hr class="border-purple-400 rounded-xl">
 							<div class="mt-6">Quantity: {{ item.quantity }}</div>
@@ -45,7 +45,7 @@
 					<hr class="border-purple-400 rounded-xl mb-6">
 				{% endfor %}
 				<p class="text-lg">Date: {{ order.created_at }}</p>
-				<p class="text-lg">Toral: $ 400</p>
+				<p class="text-lg">Toral: $ {{ order.get_total_price }}</p>
 				
 			</div>
 		</div>
