refactor: refactored pages to look nice on mobile

--- a/ecommerce/templates/ecommerce/checkout.html
+++ b/ecommerce/templates/ecommerce/checkout.html
@@ -8,7 +8,7 @@
 	<div class="products w-full md:w-3/4 lg:w-3/4 xl:w-3/4">
 		<h1 class="mb-5 text-3xl">Checkout</h1>
 	
-		<div class="w-full pr-6">
+		<div class="w-full md:pr-6">
 			<div class="mb-6 p-6 bg-gray-100 rounded-xl">
 				<h2 class="mb-5 uppercase text-lg">Shipping Information</h2>
 				<div class="flex space-x-6">
@@ -53,7 +53,7 @@
 			</div>
 		</div>
 	</div>
-	<div class="summary w-full md:w-1/4 lg:w-1/4 xl:w-1/4 p-6 bg-gray-100 rounded-xl mt-3">
+	<div class="summary w-full md:w-1/4 p-6 bg-gray-100 rounded-xl mt-3">
 		<h2 class="uppercase text-lg mb-5">summary</h2>
 		<div class="mb-6 flex justify-between">
 			<span class="font-semibold">Total</span>
