--- a/ecommerce/templates/ecommerce/partials/product_list_item.html
+++ b/ecommerce/templates/ecommerce/partials/product_list_item.html
@@ -1,7 +1,7 @@
 <div class="w-full md:w-1/3 xl:w-1/4 p-6">
 	<a href="{% url 'ecommerce:product_detail' product.slug %}">
 		<img
-			class="rounded-lg hover:shadow-lg"
+			class="w-full rounded-lg hover:shadow-lg"
 			src="{{ product.get_thumbnail }}"
 		/>
 	</a>
