--- a/ecommerce/templates/ecommerce/partials/cart_item.html
+++ b/ecommerce/templates/ecommerce/partials/cart_item.html
@@ -1,11 +1,11 @@
 {% if item %}	
 	<div class="product mb-6 flex pr-6" id="cart-item-{{ item.product.id }}">
-		<a href="#" class="w-1/4">
+		<a href="{% url 'ecommerce:product_detail' item.product.slug %}" class="w-1/4">
 			<img src="{{ item.product.get_thumbnail }}" class="hover:shadow-lg rounded-xl">
 		</a>
 		<div class="w-3/4 pl-6">
 			<div class="flex justify-between">
-				<a href="#" class="text-lg">{{ item.product.name }}</a>
+				<a href="{% url 'ecommerce:product_detail' item.product.slug %}" class="text-lg">{{ item.product.name }}</a>
 				<span class="mb-6 pt-1 text-gray-500">$ {{ item.product.price }}</span>
 			</div>
 			<hr>
