--- a/ecommerce/templates/ecommerce/index.html
+++ b/ecommerce/templates/ecommerce/index.html
@@ -7,7 +7,7 @@
 	<div class="max-w-3xl mx-auto text-center">
 		<p class="mb-2 text-3xl lg:text-6xl text-white">Welcome to Apex Store</p>
 		<p class="mb-10 text-white">We sell the best products.</p>
-		<a href="#" class="inline-block px-8 py-4 rounded-xl bg-white text-purple-500 hover:bg-gray-200">Start
+		<a href="{% url 'ecommerce:shop' %}" class="inline-block px-8 py-4 rounded-xl bg-white text-purple-500 hover:bg-gray-200">Start
 			Shopping</a>
 	</div>
 </header>
