--- a/ecommerce/templates/ecommerce/product_detail.html
+++ b/ecommerce/templates/ecommerce/product_detail.html
@@ -11,7 +11,11 @@
 	<div class="information w-full lg:p-6 lg:w-2/5">
 		<h1 class="text-2xl">{{ product.name }}</h1>
 		<p class="mt-1 text-gray-400">$ {{ product.price }}</p>
-
+		
+		{% if product.get_total_rating > 0 %}
+			<p class="mt-1 text-gray-400">Rating: {{ product.get_total_rating }} / 6</p>
+		{% endif %}
+			
 		{% if product.description %}
 		<p class="mt-6 text-gray-700">{{ product.description }}</p>
 		{% endif %}
